test/sema/integer-plus-pointer.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

def f(a: int, b: int*) {
    let c = b + a;
    let d = a + b; // CHECK: [[@LINE]]:15: error: invalid operands 'int' and 'int*' to '+'
}
